--- a/acerca.css
+++ b/acerca.css
@@ -22,7 +22,7 @@ h1 {
 
 .encabezado { 
 
-    background-image: url(partearribafondo.jpg);
+    background-image: url("partearribafondo.jpg");
     border-bottom: 1px solid #e5e7eb;
     background-position: center 20%;
     height: 50vh;
@@ -175,4 +175,5 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
