Modify header background and refine styles
Updated the background image for the header and ensured consistent styling across elements.

--- a/acerca.css
+++ b/acerca.css
@@ -21,8 +21,7 @@ h1 {
 }
 
 .encabezado { 
-
-    background-image: url("partearribafondo.jpg");
+    background-image: url("https://i.imgur.com/3ZQ3Z.jpg");
     border-bottom: 1px solid #e5e7eb;
     background-position: center 20%;
     height: 50vh;
