--- a/acerca.css
+++ b/acerca.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .encabezado { 
-    background-image: url("https://i.imgur.com/3ZQ3Z.jpg");
+    background-image: url("partearribafondo.jpg");
     border-bottom: 1px solid #e5e7eb;
     background-position: center 20%;
     height: 50vh;
@@ -33,6 +33,11 @@ h1 {
     color: white;
     text-shadow: 0 0 10px black;
     border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+}
+
+.encabezado h1, .encabezado nav a {
+  color: white;
+  text-align: center;
 }
 
 .menu ul { 
@@ -174,5 +179,6 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
