--- a/acerca.css
+++ b/acerca.css
@@ -71,6 +71,7 @@ h1 {
 
 .menu a.activo { 
     font-weight: 600; 
+    background: #f1f5f9; 
 }
 
 .contenedor { 
@@ -179,6 +180,7 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
 
