--- a/acerca.css
+++ b/acerca.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .encabezado { 
-    background-image: url("partearribafondo.jpg");
+    background-image: url("arriba.jpg");
     border-bottom: 1px solid #e5e7eb;
     background-position: center 20%;
     height: 50vh;
@@ -180,6 +180,7 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
 
