--- a/acerca.css
+++ b/acerca.css
@@ -36,7 +36,7 @@ h1 {
 }
 
 .encabezado h1, .encabezado nav a {
-  color: white;
+  color: #8f0000;
   text-align: center;
 }
 
@@ -180,6 +180,7 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
 
