--- a/acerca.css
+++ b/acerca.css
@@ -21,18 +21,17 @@ h1 {
 }
 
 .encabezado { 
-    background-image: url("arriba.jpg");
-    border-bottom: 1px solid #e5e7eb;
-    background-position: center 20%;
-    height: 50vh;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: 0 0 10px black;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  background: url("arriba.jpg") center 20% / cover no-repeat;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-shadow: 0 0 10px black;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+  z-index: 1; 
+  position: relative;
 }
 
 .encabezado h1, .encabezado nav a {
@@ -180,6 +179,7 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
 
