--- a/acerca.css
+++ b/acerca.css
@@ -13,7 +13,7 @@ body {
 
 }
 p{
-    color: white;
+    color: white !important;
 }
 
 
@@ -183,6 +183,7 @@ a:hover {
 .final a:hover {
     color: #ff3131;
 }
+
 
 
 
